--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
 html{
     background-color: grey;
-    width: 100%;
+    width: 100vw;
     align-items: center;
+    
 }
 .container{
     align-items: center;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
+}
+.btn{
+    flex-wrap: wrap;
+    flex: 1;
+    display: flex;
 }
 .title{
-    font-size: 6em;
+    flex: 1;
+    text-align: center;
+    width: 80vw;
+    font-size: 5em;
     color: rgb(228, 228, 228);
-    margin: 2rem;
+    margin: 1rem;
     font-weight: bold;
 }
 
@@ -26,39 +35,42 @@ html{
     background-color: rgb(73, 132, 162);
 }
 button{
-    width: 400px;
-    padding: 20px;
-    margin: 1rem;
+    width: 5em;
+    padding: 0.3em;
+    margin: 0.2em;
     background-color: rgb(110, 191, 114);
     border-radius: 5px;
     font-weight: bold;
     box-shadow: 5px 5px #5a5a5a;
-    font-size: 5em;
-}
-button:hover{
-    background-color: rgba(72, 72, 72, 0.48);
+    font-size: 4em;
+    flex: 1;
 }
 .gameDiv{
     display: flex;
     align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    font-size: 2em;
 }
 .box{
-    margin: 2px;
-    padding: 2px;
-    font-size: 3em;
+    margin: 1vh 0;
     width: 11em;
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex: 1;
 }
 .computer, .player{
     border-bottom: 2px solid rgb(0, 0, 0);
     flex: 1;
-    margin: 0 0 0.3em 0 ;
+    margin: 1vh;
     color: rgb(0, 0, 0);
-    padding: 5%;
+    padding: 0.3em;
     border-radius: 50px;
     box-shadow: 2px 2px #5a5a5a;
+    width: 5em;
+    text-align: center;
 }
 .computer{
     background-color: rgba(243, 0, 0, 0.645);
@@ -66,31 +78,88 @@ button:hover{
 .player{
     background-color: rgba(52, 215, 79, 0.631);
 }
-.smallBox{
-    background-color: rgb(209, 209, 209);
-    padding: 20px;
-    margin: 0.3em;
-    border-radius: 10px;
-}
 .winnerDiv{
     text-align: center;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    flex: 2 0 30vw;
+    margin: 2vw;
+}
+.smallBox{
+    background-color: rgb(209, 209, 209);
+    padding: 0.5em;
+    margin: 0.3em;
+    border-radius: 10px;
+    width: 10vw;
+    text-align: center;
+    
 }
 .winnerDiv .smallBox{
-    width: 9em;
     line-height: 1.3em;
     background-color: rgb(223, 128, 44);
     font-weight: bold;
+    flex: 1;
 }
 .restart{
     font-size: 1em;
-    margin: 0.2em;
+    margin: 1.5em;
+    flex: 1 0 30vw;
 }
 .start{
     margin-top: 2em;
-    border-radius: 90px;
-    width: 5em;
-    height: 2em;
+    border-radius: 40px;
+    width: 25vw;
+    height: 1.7em;
+    padding: 0.3em;
+    position: absolute;
+    top: 35vh;
 }
-.winner{
-    margin-bottom: 0;
+.winnerScore{
+    height: 2.6em;
 }
+
+@media only screen and (max-width: 600px){
+    .start{
+        width: 50vw;
+    }
+    .title{
+        font-size: 2.5em;
+    }
+    button{
+        font-size: 2em;
+    }
+    .gameDiv{
+        font-size: 1.2em;
+    }
+    .box{
+        margin: 2vh 0;
+    }
+    .smallBox{
+        font-weight: bold;
+        margin: 0.2vh 0;
+        width: 42vw;
+    }
+    .computerDiv, .playerDiv{
+        order: 1;
+    }
+    .winnerDiv{
+        margin: 0;
+        order: 2;
+        flex: 1 0 90vw;
+    }
+    .winner, .winnerScore{
+        order: -1;
+        margin: 0 1vw;
+    }
+    .restart{
+        flex: 1 0 80vw;
+        margin: 2vh 5vw;
+        
+    }
+  }
+  @media (hover: hover) and (pointer: fine) {
+    button:hover { 
+        background-color: rgba(72, 72, 72, 0.48);
+    }
+  }
